# BGS-dev

./: CMakeLists.txt  README.md  bgs
cmake_modules/: FindSFML.cmake
doc/: UML.uxf  UseCasesProto
doc/Environements/: cavernes
old/: makefile
src/: gameController.cpp  inventoryController.cpp  loadGameMenuController.cpp  main.cpp  mapController.cpp  menuController.cpp  newGameMenuController.cpp  optionsFile.cpp  sessionController.cpp  startController.cpp
src/GUI/: gameInput.cpp  gameWindow.cpp  gameWindow.cpp~  inventoryScreen.cpp  loadGameMenuScreen.cpp  mapScreen.cpp  menuScreen.cpp  newGameMenuScreen.cpp  sessionScreen.cpp  startScreen.cpp
src/Model/: cell.cpp  character.cpp  door.cpp  equipement.cpp  interface.cpp  interface.cpp~  item.cpp  map.cpp  mapExit.cpp  obstacle.cpp  race.cpp  textures.cpp
src/headers/: gameController.h  inventoryController.h  loadGameMenuController.h  mapController.h  menuController.h  newGameMenuController.h  optionsFile.h  sessionController.h  startController.h
src/utils/: cavern.cpp  dungeon.cpp  mapGenerator.cpp  mapPattern.cpp  mapPrototype.cpp  maze.cpp  nameGenerator.cpp  plain.cpp  saveUtils.cpp  stringUtils.cpp
usr/: ini.txt  ini.txt~
usr/sav/: Machin.sav  Machin_journal.txt  Pouet.sav  Pouet_journal.txt  Teljin.sav  Teljin.sav~  Teljin_journal.sav  Teljin_journal.txt
usr/world/: D1.map~
utils/: makefile~
utils/map_gen/: generate  main.cpp  main.cpp~  makefile  makefile~  map.cpp  map.h  mapGenUtils.cpp  mapGenUtils.h  mapGenerator.cpp  mapGenerator.h  pattern.cpp  pattern.h
utils/name_analyze/: analyze  (+5 more)
(+67 files in other folders)
